name:                 lets-lens
version:              0.0.1
license:              BSD3
license-file:         LICENCE
author:               Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:           Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
copyright:            Copyright (C) 2015 National ICT Australia Limited
synopsis:             Source code for exercises on the lens concept
category:             Education
description:          Source code for exercises on the lens concept
homepage:             https://github.com/NICTA/lets-lens
bug-reports:          https://github.com/NICTA/lets-lens/issues
cabal-version:        >= 1.10
build-type:           Custom
extra-source-files:   changelog

source-repository     head
  type:               git
  location:           git@github.com:NICTA/lets-lens.git

flag                  small_base
  description:        Choose the new, split-up base package.

library
  default-language:   Haskell2010

  build-depends:      base < 5 && >= 4
                      , QuickCheck >= 2.0
                      , doctest >= 0.9.7
                      , containers >= 0.4.0.0
                      , array >= 0.4

  ghc-options:        -Wall
                      -fno-warn-unused-binds
                      -fno-warn-unused-do-bind
                      -fno-warn-unused-imports
                      -fno-warn-type-defaults

  hs-source-dirs:     src

  exposed-modules:    Lets
                      Lets.Choice
                      Lets.Data
                      Lets.GetSetLens
                      Lets.Lens
                      Lets.OpticPolyLens
                      Lets.Profunctor
                      Lets.StoreLens
                      
test-suite            doctests
  type:
                      exitcode-stdio-1.0

  main-is:
                      doctests.hs

  default-language:
                      Haskell2010

  build-depends:
                      base < 5 && >= 3
                      , doctest >= 0.9.7
                      , filepath >= 1.3
                      , directory >= 1.1
                      , QuickCheck >= 2.0
                      , template-haskell >= 2.8

  ghc-options:
                      -Wall
                      -threaded

  hs-source-dirs:
                      test
